changed swagger spec  with avatars and pits
Defined methods and data structure for an MVP of pit fighting.
